--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,16 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input{
+  background-color: #1a1a1a;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #f9f9f9;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
